fix(picture) changes padding to margin for vertical spacing
due to zoom animation not working as espected with padding

--- a/src/main.scss
+++ b/src/main.scss
@@ -159,8 +159,8 @@ body {
   display: none;
   position: relative;
   overflow: hidden;
-  padding-top: calc(var(--s-picture-margin-bottom) * 0.5);
-  padding-bottom: calc(var(--s-picture-margin-bottom) * 0.5);
+  margin-top: calc(var(--s-picture-margin-bottom) * 0.5);
+  margin-bottom: calc(var(--s-picture-margin-bottom) * 0.5);
 
   &.is-loaded {
     display: block;
@@ -194,7 +194,6 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    top: calc(var(--s-picture-margin-bottom) * -0.5);
 
     #{$root}.is-masked & {
       display: flex;
